--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "redux-persist": "^5.10.0",
     "redux-persist-expo-securestore": "^0.1.1",
     "redux-persist-sensitive-storage": "^1.0.0",
+    "redux-promise-middleware": "^5.1.1",
     "stream-browserify": "^2.0.1",
     "uuid": "^3.3.2",
     "vm-browserify": "^1.1.0",
