--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-crypto": "^2.1.2",
     "react-native-elements": "^0.19.1",
     "react-native-fontawesome": "^5.7.0",
+    "react-native-fs": "^2.11.15",
     "react-native-qrcode-svg": "^5.1.0",
     "react-native-randombytes": "^3.5.0",
     "react-native-sensitive-info": "^5.2.4",
