--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "ethereumjs-wallet": "^0.6.0",
     "events": "^3.0.0",
     "expo": "^27.1.1",
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
     "native-base": "^2.7.2",
     "node-libs-browser": "^2.1.0",
     "react": "16.3.1",
+    "react-moment": "^0.7.9",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
     "react-native-config": "^0.11.5",
     "react-native-crypto": "^2.1.2",
