--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "analytics-react-native": "^1.2.0",
+    "any-promise": "^1.3.0",
     "assert": "^1.4.1",
     "ethereumjs-util": "^5.2.0",
     "ethereumjs-wallet": "^0.6.0",
