--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -95,6 +95,8 @@ apply from: 'expo.gradle'
 apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
 
 dependencies {
+    compile project(':react-native-touch-id')
+    compile project(':react-native-keychain')
     compile project(':react-native-os')
     compile project(':react-native-camera')
     compile project(':react-native-fs')
