--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "rn-nodeify": "^10.0.0"
   },
   "dependencies": {
+    "@haskkor/react-native-pincode": "^1.6.3",
     "analytics-react-native": "^1.2.0",
     "any-promise": "^1.3.0",
     "assert": "^1.4.1",
@@ -42,14 +43,17 @@
     "react-native-elements": "^0.19.1",
     "react-native-fontawesome": "^5.7.0",
     "react-native-fs": "^2.11.15",
+    "react-native-keychain": "^3.0.0",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-qrcode-svg": "^5.1.0",
     "react-native-randombytes": "^3.5.0",
     "react-native-sensitive-info": "^5.2.4",
     "react-native-simple-modal": "^9.0.1",
     "react-native-svg": "^6.5.2",
+    "react-native-touch-id": "^4.0.4",
     "react-native-uuid": "^1.4.9",
     "react-navigation": "^2.11.2",
+    "react-navigation-slide-from-right-transition": "^1.0.4",
     "react-redux": "^5.0.7",
     "readable-stream": "^3.0.0",
     "redux": "^4.0.0",
