--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     "react-native-elements": "^0.19.1",
     "react-native-fontawesome": "^5.7.0",
     "react-native-fs": "^2.11.15",
+    "react-native-image-slider": "^2.0.3",
     "react-native-loading-spinner-overlay": "^0.5.2",
+    "react-native-material-design": "^0.3.7",
+    "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-qrcode-svg": "^5.1.0",
     "react-native-randombytes": "^3.5.0",
     "react-native-sensitive-info": "^5.2.4",
@@ -51,6 +54,7 @@
     "react-native-svg": "^6.5.2",
     "react-native-touch-id": "^4.0.4",
     "react-native-uuid": "^1.4.9",
+    "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.11.2",
     "react-navigation-slide-from-right-transition": "^1.0.4",
     "react-redux": "^5.0.7",
