--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-image-slider": "^2.0.3",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-material-design": "^0.3.7",
+    "react-native-paper": "^2.0.1",
     "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-qrcode-svg": "^5.1.0",
     "react-native-randombytes": "^3.5.0",
@@ -56,6 +57,7 @@
     "react-native-uuid": "^1.4.9",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.11.2",
+    "react-navigation-material-bottom-tabs": "^0.4.0",
     "react-navigation-slide-from-right-transition": "^1.0.4",
     "react-redux": "^5.0.7",
     "readable-stream": "^3.0.0",
