--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "analytics-react-native": "^1.2.0",
     "any-promise": "^1.3.0",
     "assert": "^1.4.1",
+    "crypto-js": "^3.1.9-1",
     "ethereumjs-util": "^5.2.0",
     "ethereumjs-wallet": "^0.6.0",
     "events": "^3.0.0",
@@ -35,14 +36,16 @@
     "moment-timezone": "^0.5.21",
     "native-base": "^2.7.2",
     "node-libs-browser": "^2.1.0",
+    "prop-types": "^15.6.0",
     "react": "16.3.1",
     "react-moment": "^0.7.9",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
+    "react-native-cache-image": "^1.0.0",
     "react-native-config": "^0.11.5",
     "react-native-crypto": "^2.1.2",
     "react-native-elements": "^0.19.1",
     "react-native-fontawesome": "^5.7.0",
-    "react-native-fs": "^2.11.15",
+    "react-native-fs": "^2.11.17",
     "react-native-image-slider": "^2.0.3",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-material-design": "^0.3.7",
@@ -52,6 +55,7 @@
     "react-native-randombytes": "^3.5.0",
     "react-native-sensitive-info": "^5.2.4",
     "react-native-simple-modal": "^9.0.1",
+    "react-native-star-rating": "^1.1.0",
     "react-native-svg": "^6.5.2",
     "react-native-touch-id": "^4.0.4",
     "react-native-uuid": "^1.4.9",
@@ -68,6 +72,7 @@
     "redux-persist-sensitive-storage": "^1.0.0",
     "redux-thunk": "^2.3.0",
     "stream-browserify": "^2.0.1",
+    "url-parse": "^1.4.3",
     "uuid": "^3.3.2",
     "vm-browserify": "^1.1.0",
     "web3": "^0.20.6",
