--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-moment": "^0.7.9",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
     "react-native-cache-image": "^1.0.0",
+    "react-native-calendars": "^1.21.0",
     "react-native-config": "^0.11.5",
     "react-native-crypto": "^2.1.2",
     "react-native-elements": "^0.19.1",
@@ -48,6 +49,7 @@
     "react-native-fs": "^2.11.17",
     "react-native-image-slider": "^2.0.3",
     "react-native-loading-spinner-overlay": "^0.5.2",
+    "react-native-maps": "^0.21.0",
     "react-native-material-design": "^0.3.7",
     "react-native-paper": "^2.0.1",
     "react-native-parallax-scroll-view": "^0.21.3",
