--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -95,6 +95,7 @@ apply from: 'expo.gradle'
 apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
 
 dependencies {
+    compile project(':react-native-maps')
     compile project(':react-native-fs')
     compile project(':react-native-vector-icons')
     compile project(':react-native-touch-id')
